# Ensoc_media

./: README.md
Backend/: .env  Cargo.toml  note.txt
Backend/blockchain/: Cargo.toml
Backend/blockchain/src/: lib.rs  raw.sql  token_balance.rs
Backend/entity/: Cargo.toml
Backend/entity/src/entities/: mod.rs  nativetokenbalance.rs  prelude.rs  users.rs  usertokenbalance.rs  usertokens.rs
Backend/migration/: Cargo.toml
Backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240413_131231_add_native_token_balance_table.rs  m20240417_141245_add_contraint_to_native_token_table.rs  m20240422_190442_user_tokens.rs
Backend/src/: lib.rs  main.rs
Backend/src/api/: error.rs  get_message.rs  get_message_on_bootstrap.rs  mod.rs  send_message.rs  send_message_public.rs  test.sql  types.rs  typing.rs  update_message_status.rs  user_search.rs  websocket.rs
Backend/src/api/auth/: login.rs  mod.rs  register.rs
Backend/src/api/blockchain/: mod.rs  token.rs  transaction.rs
Backend/src/api/net/: generic.rs  mod.rs
Backend/src/api/utils/: jwt.rs  mod.rs  time.rs
Backend/src/db/: mod.rs
Backend/src/db/postgres/: connection.rs  mod.rs
Backend/src/db/redis_db/: connection.rs  mod.rs
Backend/src/db/surreal/: connection.rs  mod.rs  schema.rs
Backend/src/types/: enums.rs  message.rs  mod.rs  user.rs
Frontend/: package-lock.json  package.json
Frontend/src/app/: StoreProvider.tsx  layout.tsx  page.tsx
Frontend/src/components/: Chat.tsx  ChatPage.tsx  ChatText.tsx  Chatnavbar.tsx  Login.tsx  Navbar.tsx  Profile.tsx  Sidebar.tsx  SignUp.tsx
Frontend/src/hooks/: useAuth.ts  useGenerateMnemonic.ts  useGetMessages.ts
Frontend/src/services/: api.ts
(+35 files in other folders)
